Changed table heading levels on logged-in homepage and fixed contrast for logo in navbar

--- a/static/css/bootstrap-overrides.css
+++ b/static/css/bootstrap-overrides.css
@@ -44,6 +44,10 @@ a
   background-color: rgba(208, 216, 255, 0.38);
 }
 
+.navbar-default .navbar-brand
+{
+  color: #494949;
+}
 
 /* Disable bootstrap responsiveness */
 .container {
